Fix minor dark mode issue

--- a/css/index.scss
+++ b/css/index.scss
@@ -557,7 +557,6 @@ i {
 }
 
 #no_results {
-    color: black !important;
     margin-top: 0;
     margin-bottom: 15px;
 
